--- a/AulaMvc/Application/appsettings.json
+++ b/AulaMvc/Application/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Connections": {
+    "ConnectionStringUdemy": "Server=myServerAddress;Database=myDataBase;User",
+    "Id=myUsername;Password=myPassword;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
